Resolve zindex bug on mobile

--- a/wp-content/themes/csisjti/assets/_scss/components/_modal.scss
+++ b/wp-content/themes/csisjti/assets/_scss/components/_modal.scss
@@ -19,7 +19,7 @@ dialog[open] {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 2;
+  z-index: 11;
   background-color: rgba(0, 0, 0, 0.66);
 }
 
@@ -32,6 +32,7 @@ dialog::backdrop {
   top: 50%;
   left: 50%;
   max-height: 100%;
+  z-index: 12;
   overflow: auto;
   background: $color-white-100;
   border: unset;
